k8s/glance/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: glance
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`home.lab`)
      middlewares:
      - name: forwardauth-authelia
      services:
        - kind: Service
          name: glance-web
          port: 80
